# conference-hall-extractor

./: Cargo.toml
src/: main.rs
src/domain/: filters.rs  mod.rs  model.rs  ports.rs
src/infra/: mod.rs
src/infra/export_loader/: loader.rs  mod.rs  model.rs
src/infra/hoverboard_saver/: mod.rs  model.rs  saver.rs
src/infra/mail_saver/: saver.rs
