[package]
name = "conference-hall-extractor"
version = "0.1.0"
authors = ["fteychene <francois.teychene@gmail.com>"]
edition = "2018"

[dependencies]
im = { version = "*", features = ["proptest", "serde"] }
failure = "0.1.5"
reqwest = "0.9.9"
uuid = { version = "0.7", features = ["serde", "v4"]  }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
itertools = "0.8.0"
csv = "1.0.5"